--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "date-fns": "^2.29.3",
     "immer": "^9.0.19",
     "phosphor-react": "^1.4.1",
-    "react-hook-form": "^7.39.4"
+    "react-hook-form": "^7.39.4",
+    "polished": "^4.2.2",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
